small css fix to make carousel captions in gray boxes readable.

--- a/extensions/asm.summer12/src/asm/summer12/static/css/asm.css
+++ b/extensions/asm.summer12/src/asm/summer12/static/css/asm.css
@@ -197,6 +197,10 @@ a:hover {
   background-repeat: repeat-x;
 }
 
+.box-gray .carousel-caption {
+    color: white;
+}
+
 .box-red {
   color: white;
   background-color: #962e2e;
